--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<canvas width="1000" height="800" id="myCanvas"></canvas>
 		<br>
 		<!--- Create Bootstrap button --->
-		<button class="btn btn-warning btn-lg" onclick="playSound()">Dear bother</button>
+		<button class="btn btn-warning btn-lg" onclick="playSound()">Dear brother</button>
 	</center>
 	<audio id="myAudio" src="bdayaudio.mp3"></audio>
 	<script src="main.js"></script>
